<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_capture"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_zxing_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/text_btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="16dp"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/about_lable"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center">

        <ImageButton
            android:id="@+id/img_btn_gallery"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="64dp"
            android:layout_marginLeft="@dimen/item_margin"
            android:layout_marginRight="@dimen/item_margin"
            android:src="@drawable/ic_gallery"
            android:background="@drawable/circle_btn_bg"
            android:contentDescription="@string/description_gallery" />

        <ImageButton
            android:id="@+id/img_btn_flashlight"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="64dp"
            android:layout_marginLeft="@dimen/item_margin"
            android:layout_marginRight="@dimen/item_margin"
            android:src="@drawable/ic_flash_off"
            android:background="@drawable/circle_btn_bg"
            android:contentDescription="@string/description_flashlight"/>

    </LinearLayout>

</FrameLayout>