<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_more"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/padding_top"
            android:layout_width="match_parent"
            android:layout_height="128dp" />

        <LinearLayout
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_btn_save"
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginBottom="2dp"
                android:text="@string/save_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:id="@+id/text_btn_copy"
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginBottom="2dp"
                android:text="@string/copy_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:id="@+id/text_btn_dynamic"
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginBottom="2dp"
                android:visibility="gone"/>

            <View
                android:id="@+id/view_divider_dynamic"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorDivider"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/text_btn_more"
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:text="@string/detail" />
        </LinearLayout>

        <View
            android:id="@+id/padding_bottom"
            android:layout_width="match_parent"
            android:layout_height="128dp" />

    </LinearLayout>

</ScrollView>